# Ver2Tri-public

./: .env.example  .gitignore  README.md  config.py  dashboard.py  main.py  pyproject.toml  run.md
core/: __init__.py  api_validation_client.py  api_validation_fixer.py  assembler.py  compare_agent.py  formatter.py  llm_profiles.py  migration_knowledge.py  pattern_guard.py  pipeline.py  pipeline_stages.py  splitter.py  state_manager.py  translator.py  trino_tester.py
doc/: project description.MD  project file function.MD  project structure.MD
dspy_modules/: compiler.py  signature.py
golden_dataset/: examples.json  forbidden_patterns.json  header_rule_first_part.MD  header_rule_last_part.MD  runtime_repair_cpu_optimization_prompt.md  runtime_repair_final_prompt.md  runtime_repair_planner_prompt.md
tests/: test_compiler.py  test_golden_dataset_loader.py  test_llm_profiles.py  test_metadata_diagnostics.py  test_migration_knowledge.py  test_pipeline_runner.py  test_public_sanitization.py  test_splitter_interpolate.py  test_trino_tester.py  test_version_selection.py
